# sys_metrics

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
.github/: extract_bench.py
.github/workflows/: ci.yml  clippy.yml  common.yml  license-update.yml  linux.yml  macos.yml
benches/: cpu_bench.rs  disks_bench.rs  global_bench.rs  host_bench.rs  memory_bench.rs  miscs_bench.rs  network_bench.rs  sys_bench.rs  users_bench.rs  virt_bench.rs
src/: cpu.rs  disks.rs  lib.rs  macos_binding.rs  macos_utils.rs  memory.rs  miscs.rs  models.rs  sys.rs  users.rs  utils.rs
src/cpu/: mod.rs
src/cpu/sys/: mod.rs
src/cpu/sys/linux/: cpu_freq.rs  cpu_stat.rs  cpu_stats.rs  cpu_times.rs  cpufreq.rs  logical_count.rs  mod.rs  physical_count.rs
src/cpu/sys/macos/: cpu_freq.rs  cpu_stat.rs  cpu_stats.rs  cpu_times.rs  cpufreq.rs  logical_count.rs  mod.rs  physical_count.rs
src/cpu/sys/unix/: loadavg.rs  mod.rs
src/disks/: mod.rs
src/disks/sys/linux/: ioblocks.rs  iostats.rs  mod.rs  partitions.rs
src/disks/sys/macos/: ioblocks.rs  iostats.rs  mod.rs  partitions.rs
src/host/: mod.rs
src/host/sys/: mod.rs
src/host/sys/linux/: host_info.rs  mod.rs  sysinfo.rs  users.rs  uuid.rs
src/host/sys/macos/: host_info.rs  mod.rs  users.rs  uuid.rs
src/host/sys/unix/: hostname.rs  kernel_version.rs  mod.rs  os_version.rs  uname.rs  users.rs
src/memory/: mod.rs
src/memory/sys/linux/: memory.rs  swap.rs
src/memory/sys/macos/: memory.rs  mod.rs  swap.rs
src/network/: mod.rs
src/network/sys/linux/: iocounters.rs  ionets.rs  mod.rs
src/network/sys/macos/: iocounters.rs  ionets.rs  mod.rs
src/virt/: mod.rs
src/virt/sys/: mod.rs
src/virt/sys/linux/: containers.rs  mod.rs  vm_dmi.rs
src/virt/sys/macos/: mod.rs
tests/: cpu.rs  disks.rs  host.rs  memory.rs  miscs.rs  network.rs  sys.rs  users.rs  virt.rs
