[package]
name = "sys_metrics"
version = "0.1.1"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

repository = "https://github.com/Martichou/sys_metrics"
description = "Cross-platform library to gather stats/information from the host"
keywords = ["metrics", "sysinfo", "psutil", "stats", "heim"]
license = "AGPL-3.0"
readme = "README.md"

categories = ["os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
nix = "0.19.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
unescape = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.2"
io-kit-sys = "0.1.0"
lazy_static = "1.4.0"
mach = "0.3"

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[[bench]]
name = "global_bench"
harness = false

[[bench]]
name = "cpu_bench"
harness = false

[[bench]]
name = "disks_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "miscs_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false

[[bench]]
name = "sys_bench"
harness = false

[[bench]]
name = "users_bench"
harness = false