[package]
name = "sys_metrics"
version = "0.2.2"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/sys_metrics"
repository = "https://github.com/Martichou/sys_metrics"
description = "Cross-platform library to gather stats/information from the host"
keywords = ["metrics", "sysinfo", "psutil", "stats", "heim"]
license = "AGPL-3.0"
readme = "README.md"

categories = ["os", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.2"
io-kit-sys = "0.1.0"
mach = "0.3"

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
bench = false

[[bench]]
name = "cpu_bench"
harness = false

[[bench]]
name = "disks_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "host_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
